Bug 246883 - failed imap configuration creates broken processes
Summary: failed imap configuration creates broken processes
Status: CLOSED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Account Wizard (other bugs)
Version First Reported In: unspecified
Platform: Debian unstable Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-06 10:54 UTC by Ludwig Reiter
Modified: 2010-09-21 09:53 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ludwig Reiter 2010-08-06 10:54:13 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Version: 4.5.~20100730.1157245-1maemo1.1157229  (enterprise5)

Reproducible: Didn't try

Steps to Reproduce:
1. Try to enter a Kolab Imap resource with some mistakes.
=> Failed to finish setup.
2. Try this again.
3. Enter the right account data.

Actual Results:  
On the devices runs some broken akonadi processes.
The config cannot be finished. 

Expected Results:  
No broken processes after wrong config.
Then the configuration should work.
Comment 1 Volker Krause 2010-09-07 10:43:23 UTC
Which kind of mistakes did you enter exactly? What was the error message from the account wizard?
Comment 2 Volker Krause 2010-09-08 10:02:02 UTC
Never mind, I see what you mean.
Comment 3 Volker Krause 2010-09-08 18:28:15 UTC
SVN commit 1173094 by vkrause:

Make cancel roll back the current setup, no matter at what point you
actually cancel.

BUG: 246883


 M  +6 -0      dialog.cpp  
 M  +2 -0      dialog.h  
 M  +22 -1     setupmanager.cpp  
 M  +6 -0      setupmanager.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1173094
Comment 4 Felix Wolfsteller 2010-09-21 09:53:51 UTC
Could not provoke with 4:4.5~20100920.1177660-1maemo1.1177547 , closing.