Make cancel roll back the current setup, no matter at what point you actually cancel.

BUG: 246883

svn path=/trunk/KDE/kdepim/runtime/; revision=1173094